--- a/package.json
+++ b/package.json
@@ -11,18 +11,26 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.4",
+    "@react-native-async-storage/async-storage": "^2.1.1",
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^7.2.0",
+    "@react-navigation/drawer": "^7.1.1",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
     "expo": "~52.0.28",
+    "expo-blur": "^14.0.3",
+    "expo-image-picker": "^16.0.5",
     "expo-linear-gradient": "^14.0.2",
     "expo-status-bar": "~2.0.1",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-native": "0.76.6",
+    "react-native-gesture-handler": "^2.23.0",
     "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
+    "react-native-reanimated-carousel": "^3.5.1",
+    "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "^4.6.0",
+    "react-native-vector-icons": "^10.2.0",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
